2004-04-26 [christoph]

	* src/uiddb.c
		fix memory leak in uiddb_insert_entry()

	* src/maildir.c
		fix crash then info part in filenames is missing

2004-04-25 [christoph]

	* src/Makefile.am
	* src/maildir.c
	* src/plugin.c
	* src/uiddb.[ch]				** NEW **
		restructure uid management
		(old sylpheed_uid.db files in Maildir folders have to be
		 removed, because the content is no longer valid)

2004-01-13 [christoph]

	* src/maildir.c
		update maildir FolderClass

2004-01-12 [christoph]

	* src/maildir.c
		ignore folders without cur directory

2004-01-01 [christoph]

	* src/maildir.c
		fix building of folder's GNode

	* src/maildir.c
		unregister FolderClass when unloading

2003-12-03 [christoph]

	* src/maildir.c
		sync with changes in Sylpheed's FolderClass >= 0.9.7claws11

2003-12-02 [christoph]

	* src/maildir.c
		sync with changes in Sylpheed's FolderClass >= 0.9.7claws10

	* src/plugin.c
		add version checks